--- a/index.html
+++ b/index.html
@@ -363,17 +363,35 @@
          <form class="modal-form">
             <label class="modal-input-text">
                <span>Name</span>
-               <input type="text" class="modal-input" name="Name" placeholder="info">
+               <span class="input-wrap">
+                  <input type="text" class="modal-input" name="Name" placeholder="">
+                  <svg class="modal-input-icon" width="18" height="18">
+                     <use href="./images/icons.svg#icon-person"></use>
+                  </svg>
+               </span>
             </label>
             <label class="modal-input-text">
                <span>Phone</span>
-               <input type="tel" class="modal-input" name="Phone" placeholder="info"></label>
+               <span class="input-wrap">
+                  <input type="tel" class="modal-input" name="Phone" placeholder="">
+                  <svg class="modal-input-icon" width="18" height="18">
+                     <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
+               </span>
+            </label>
             <label class="modal-input-text">
                <span>Email</span>
-               <input type="email" class="modal-input" name="Email" placeholder="info"></label>
+               <span class="input-wrap">
+                  <input type="email" class="modal-input" name="Email" placeholder="">
+                  <svg class="modal-input-icon" width="18" height="18">
+                     <use href="./images/icons.svg#icon-email"></use>
+                  </svg>
+               </span>
+            </label>
             <label class="modal-input-text">
                <span>Comment</span>
-               <input type="text" class="modal-input" name="Comment" placeholder="Text input"></label>
+               <textarea name="Comment" class="modal-comment" placeholder="Text input"></textarea>
+            </label>
             <button type="submit">Send</button>
          </form>
       </div>
