--- a/index.html
+++ b/index.html
@@ -352,6 +352,8 @@
          </div>
       </div>
    </footer>
+
+<!-- Modal -->
    <div class="backdrop" data-modal>
       <div class="modal">
          <button type="button" data-modal-close class="modal-close">
@@ -364,7 +366,7 @@
             <label class="modal-input-text">
                <span>Name</span>
                <span class="input-wrap">
-                  <input type="text" class="modal-input" name="Name" placeholder="">
+                  <input type="text" class="modal-input" name="Name" placeholder="" required>
                   <svg class="modal-input-icon" width="18" height="18">
                      <use href="./images/icons.svg#icon-person"></use>
                   </svg>
@@ -373,7 +375,7 @@
             <label class="modal-input-text">
                <span>Phone</span>
                <span class="input-wrap">
-                  <input type="tel" class="modal-input" name="Phone" placeholder="">
+                  <input type="tel" class="modal-input" name="Phone" placeholder="" required>
                   <svg class="modal-input-icon" width="18" height="18">
                      <use href="./images/icons.svg#icon-phone"></use>
                   </svg>
@@ -382,7 +384,7 @@
             <label class="modal-input-text">
                <span>Email</span>
                <span class="input-wrap">
-                  <input type="email" class="modal-input" name="Email" placeholder="">
+                  <input type="email" class="modal-input" name="Email" placeholder="" required>
                   <svg class="modal-input-icon" width="18" height="18">
                      <use href="./images/icons.svg#icon-email"></use>
                   </svg>
@@ -392,6 +394,17 @@
                <span>Comment</span>
                <textarea name="Comment" class="modal-comment" placeholder="Text input"></textarea>
             </label>
+
+            <div>
+               <input type="checkbox" class="modal-check visually-hidden" id="policy" name="policy" value="true" required>
+               <label for="policy" class="check-text">
+                  <span>
+                     <svg class="checkbox-icon" width="10" height="8">
+                        <use href="./images/icons.svg#icon-vector"></use>
+                     </svg>
+                  </span>I accept the terms and conditions of the&nbsp;<a href="" class="privacy-policy">Privacy Policy</a></label>
+            </div>
+
             <button type="submit">Send</button>
          </form>
       </div>
