--- a/index.html
+++ b/index.html
@@ -350,11 +350,22 @@
                </li>
             </ul>
          </div>
+         <div class="footer-subscribe">
+            <p class="footer-input-title">Subscribe</p>
+            <form>
+               <div class="footer-submit">
+                  <label>
+                     <input type="email" class="footer-input" name="Email" placeholder="E-mail" required>
+                  </label>
+                  <button class="footer-btn" type="submit">Subscribe</button>
+               </div>
+            </form>
+         </div>
       </div>
    </footer>
 
 <!-- Modal -->
-   <div class="backdrop" data-modal>
+   <div class="backdrop is-hidden" data-modal>
       <div class="modal">
          <button type="button" data-modal-close class="modal-close">
             <svg class="modal-icon" width="8" height="8">
@@ -398,14 +409,13 @@
             <div>
                <input type="checkbox" class="modal-check visually-hidden" id="policy" name="policy" value="true" required>
                <label for="policy" class="check-text">
-                  <span>
+                  <span class="checkbox-span">
                      <svg class="checkbox-icon" width="10" height="8">
                         <use href="./images/icons.svg#icon-vector"></use>
                      </svg>
                   </span>I accept the terms and conditions of the&nbsp;<a href="" class="privacy-policy">Privacy Policy</a></label>
             </div>
-
-            <button type="submit">Send</button>
+            <button class="modal-btn" type="submit">Send</button>
          </form>
       </div>
    </div>
