--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
                   <label>
                      <input type="email" class="footer-input" name="Email" placeholder="E-mail" required>
                   </label>
-                  <button class="footer-btn" type="submit">Subscribe</button>
+                  <button class="footer-btn" type="submit">Subscribe<svg class="footer-subscribe-icon" width="24" height="24">
+                     <use href="./images/icons.svg#icon-frame"></use>
+                  </svg></button>
                </div>
             </form>
          </div>
@@ -374,47 +376,57 @@
          </button>
          <p class="modal-title">Leave your contacts and we will call you back</p>
          <form class="modal-form">
-            <label class="modal-input-text">
-               <span>Name</span>
-               <span class="input-wrap">
-                  <input type="text" class="modal-input" name="Name" placeholder="" required>
-                  <svg class="modal-input-icon" width="18" height="18">
-                     <use href="./images/icons.svg#icon-person"></use>
-                  </svg>
-               </span>
-            </label>
-            <label class="modal-input-text">
-               <span>Phone</span>
-               <span class="input-wrap">
-                  <input type="tel" class="modal-input" name="Phone" placeholder="" required>
-                  <svg class="modal-input-icon" width="18" height="18">
-                     <use href="./images/icons.svg#icon-phone"></use>
-                  </svg>
-               </span>
-            </label>
-            <label class="modal-input-text">
-               <span>Email</span>
-               <span class="input-wrap">
-                  <input type="email" class="modal-input" name="Email" placeholder="" required>
-                  <svg class="modal-input-icon" width="18" height="18">
-                     <use href="./images/icons.svg#icon-email"></use>
-                  </svg>
-               </span>
-            </label>
-            <label class="modal-input-text">
-               <span>Comment</span>
-               <textarea name="Comment" class="modal-comment" placeholder="Text input"></textarea>
-            </label>
-
-            <div>
-               <input type="checkbox" class="modal-check visually-hidden" id="policy" name="policy" value="true" required>
-               <label for="policy" class="check-text">
-                  <span class="checkbox-span">
-                     <svg class="checkbox-icon" width="10" height="8">
-                        <use href="./images/icons.svg#icon-vector"></use>
-                     </svg>
-                  </span>I accept the terms and conditions of the&nbsp;<a href="" class="privacy-policy">Privacy Policy</a></label>
-            </div>
+            <ul class="input-list list">
+               <li class="input-item">
+                  <label class="modal-input-text">
+                     <span>Name</span>
+                     <span class="input-wrap">
+                        <input type="text" class="modal-input" name="Name" placeholder="" required>
+                        <svg class="modal-input-icon" width="18" height="18">
+                           <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                     </span>
+                  </label>
+               </li>
+               <li class="input-item">
+                  <label class="modal-input-text">
+                     <span>Phone</span>
+                     <span class="input-wrap">
+                        <input type="tel" class="modal-input" name="Phone" placeholder="" required>
+                        <svg class="modal-input-icon" width="18" height="18">
+                           <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                     </span>
+                  </label>
+               </li>
+               <li class="input-item">
+                  <label class="modal-input-text">
+                     <span>Email</span>
+                     <span class="input-wrap">
+                        <input type="email" class="modal-input" name="Email" placeholder="" required>
+                        <svg class="modal-input-icon" width="18" height="18">
+                           <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                     </span>
+                  </label>
+               </li>
+               <li class="input-item-com">
+                  <label class="modal-input-text">
+                     <span>Comment</span>
+                     <textarea name="Comment" class="modal-comment" placeholder="Text input"></textarea>
+                  </label>
+               </li>
+               <div class="modal-checkbox">
+                  <input type="checkbox" class="modal-check visually-hidden" id="policy" name="policy" value="true" required>
+                  <label for="policy" class="check-text">
+                     <span class="checkbox-span">
+                        <svg class="checkbox-icon" width="10" height="8">
+                           <use href="./images/icons.svg#icon-vector"></use>
+                        </svg>
+                     </span>I accept the terms and conditions of the&nbsp;<a href="" class="privacy-policy">Privacy Policy</a>
+                  </label>
+               </div>
+            </ul>
             <button class="modal-btn" type="submit">Send</button>
          </form>
       </div>
