--- a/portfolio.html
+++ b/portfolio.html
@@ -198,6 +198,19 @@
                </li>
             </ul>
          </div>
+         <div class="footer-subscribe">
+            <p class="footer-input-title">Subscribe</p>
+            <form>
+               <div class="footer-submit">
+                  <label>
+                     <input type="email" class="footer-input" name="Email" placeholder="E-mail" required>
+                  </label>
+                  <button class="footer-btn" type="submit">Subscribe<svg class="footer-subscribe-icon" width="24" height="24">
+                     <use href="./images/icons.svg#icon-frame"></use>
+                  </svg></button>
+               </div>
+            </form>
+         </div>
       </div>
    </footer>
 </body>
