--- a/index.html
+++ b/index.html
@@ -416,17 +416,17 @@
                      <textarea name="Comment" class="modal-comment" placeholder="Text input"></textarea>
                   </label>
                </li>
+            </ul>
                <div class="modal-checkbox">
                   <input type="checkbox" class="modal-check visually-hidden" id="policy" name="policy" value="true" required>
                   <label for="policy" class="check-text">
-                     <span class="checkbox-span">
+                     <span>
                         <svg class="checkbox-icon" width="10" height="8">
                            <use href="./images/icons.svg#icon-vector"></use>
                         </svg>
                      </span>I accept the terms and conditions of the&nbsp;<a href="" class="privacy-policy">Privacy Policy</a>
                   </label>
                </div>
-            </ul>
             <button class="modal-btn" type="submit">Send</button>
          </form>
       </div>
