--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <ul class="input-list list">
                <li class="input-item">
                   <label class="modal-input-text">
-                     <span>Name</span>
+                     <span class="input-caption">Name</span>
                      <span class="input-wrap">
                         <input type="text" class="modal-input" name="Name" placeholder="" required>
                         <svg class="modal-input-icon" width="18" height="18">
@@ -390,7 +390,7 @@
                </li>
                <li class="input-item">
                   <label class="modal-input-text">
-                     <span>Phone</span>
+                     <span class="input-caption">Phone</span>
                      <span class="input-wrap">
                         <input type="tel" class="modal-input" name="Phone" placeholder="" required>
                         <svg class="modal-input-icon" width="18" height="18">
@@ -401,7 +401,7 @@
                </li>
                <li class="input-item">
                   <label class="modal-input-text">
-                     <span>Email</span>
+                     <span class="input-caption">Email</span>
                      <span class="input-wrap">
                         <input type="email" class="modal-input" name="Email" placeholder="" required>
                         <svg class="modal-input-icon" width="18" height="18">
@@ -412,7 +412,7 @@
                </li>
                <li class="input-item-com">
                   <label class="modal-input-text">
-                     <span>Comment</span>
+                     <span class="input-caption">Comment</span>
                      <textarea name="Comment" class="modal-comment" placeholder="Text input"></textarea>
                   </label>
                </li>
